--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,11 @@
     box-sizing: border-box;
 }
 
-
 body{
-    font-family: "Roboto", sans-serif;;
+    font-family: "Roboto", sans-serif;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 header, footer {
@@ -80,4 +82,92 @@ header {
 .dm-block {
     
     background-color: lightgray;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+
+.section-one {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex: 1;
+    padding: 40px 150px;
+}
+
+.section-one h2 {
+    margin-bottom: 10px;
+}
+
+.containers {
+    display: flex;
+    gap: 20px;
+    margin: 30px;
+    /* padding: 0px 20px; */
+}
+
+.container-block {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.block{
+    background-color: darkred;
+    width: 60px;
+    height: 60px;
+}
+
+.section-two {
+    background-color: #E5E7EB;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    flex: 1;
+    padding: 60px 150px;
+}
+
+.section-two .quote{
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937b4;
+    
+}
+
+.author {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 40px;
+}
+
+.section-three {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 60px 0px;
+}
+
+.section-three .bottom-container {
+    background-color: #3882F6;
+    display: flex;
+    padding: 30px 10px;
+    gap: 40px;
+    align-items: center;
+    border-radius: 8px;
+}
+
+.bottom-container button {
+    color: white;
+    border: 1px solid white;
+    background-color: #3882F6;
+    padding: 8px 16px;
+    border-radius: 5px;
 }
