--- a/css/style.css
+++ b/css/style.css
@@ -171,3 +171,11 @@ main {
     padding: 8px 16px;
     border-radius: 5px;
 }
+
+footer {
+    padding: 20px 0px ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
