--- a/css/styles.css
+++ b/css/styles.css
@@ -77,3 +77,152 @@ button {
     border-radius: 10px ;
 }
 
+/* CONTACT PAGE */
+
+.contact-body {
+    background-color: #1d2a3de0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.contact-main { 
+    border: 1px solid white;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.contact-container {
+    height: 80%;
+    border: 10px double papayawhip;
+    margin: 0px 200px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 20px;
+    padding: 20px;
+}
+
+.contact-block {
+    height: 100px;
+    border: 1px dashed rgba(118, 111, 218, 0.877);
+}
+
+.contact-title {
+    height: 100px;
+    color: beige;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 28px;
+}
+
+.contact-numbers {
+    flex: 1;
+    display: flex;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    color: rgba(240, 255, 255, 0.863);
+}
+
+
+.cont-number {
+    font-size: 24px;
+    
+}
+
+.cont-attention, .cont-number {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 45%;
+    height: 80%;
+    border: 2px dashed blue;
+}
+
+.cont-attention {
+    font-size: 20px;
+    padding: 5px 32px;
+}
+
+.contact-locations {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+
+}
+
+.cont-block {
+    width: 30%;
+    height: 80%;
+    border: 1px solid #F9FAF8;
+    color: rgba(240, 255, 255, 0.863);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0px 20px;
+    font-size: 24px;
+}
+
+/* ABOUT PAGE */
+
+.about-body {
+    background-color: #1d2a3de0;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.about-main { 
+    border: 1px solid white;
+    flex: 1;
+    margin: 40px 80px;
+}
+
+.about-container {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 40px;
+    gap: 20px;
+
+}
+
+.about-title {
+    height: 100px;
+    border: 1px dashed white;
+    font-size: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgba(240, 255, 255, 0.726);
+}
+
+
+.about-content {
+    flex: 1;
+    border: 1px dashed white;
+    height: 200px;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    font-size: 24px;
+    color: rgba(240, 255, 255, 0.658);
+}
+
+
+
+
+
+
+
